# Statek-UAV

./: .gitignore  LICENSE  README.md  frames.gv
catkin_ws/install/share/statek_map/: package.xml
catkin_ws/install/share/statek_map/cmake/: statek_mapConfig.cmake
catkin_ws/install/share/statek_playground/: package.xml
catkin_ws/install/share/statek_playground/cmake/: statek_playgroundConfig.cmake
catkin_ws/src/statek_calibrate/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/statek_calibrate/launch/: camera_info_calibrator.launch  depth_calibrator.launch  motion_calibrator.launch
catkin_ws/src/statek_calibrate/nodes/: gps_data_collector_node.py  motion_calibration_node.py
catkin_ws/src/statek_hw/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/statek_hw/include/: camera.hpp  ros_camera.hpp
catkin_ws/src/statek_hw/include/vision_publisher/: camera.hpp  ros_camera.hpp
catkin_ws/src/statek_hw/launch/: differential_to_twist_feedback.launch  dynamic_transform_publisher.launch  hardware.launch  helpers.launch  hw.launch  laser_to_img.launch  real_time.launch  statek.launch  statek_hw.launch  static_transform_publisher.launch  static_transform_publishers.launch  test.launch  tf.launch  transform_publishers.launch  twist_to_differential.launch
catkin_ws/src/statek_hw/launch/helpers/: camera_processing.launch  differential_to_twist_feedback.launch  laser_to_img.launch  twist_to_differential.launch
catkin_ws/src/statek_hw/launch/hw/: camera.launch  gps.launch  lidar.launch
catkin_ws/src/statek_hw/launch/tf/: dynamic_transform_publishers.launch  static_transform_publishers.launch
catkin_ws/src/statek_hw/msg/: Encoder.msg  Velocity.msg
catkin_ws/src/statek_hw/nodes/: differential_to_twist_feedback_node.py  encoders_wheels_transforms_publisher.py  real_time_param_sender_node.py  test.py  twist_to_differential_node.py  vision_publisher_node.py
catkin_ws/src/statek_hw/rt_src/: config.hpp  makefile  platformio.ini  upload.cfg  uploader.py
catkin_ws/src/statek_hw/rt_src/include/: am4096.hpp  config.hpp  low_pass_filter.hpp  motor.hpp  motor_controller.hpp  odometry.hpp  pid.hpp  ros.hpp
catkin_ws/src/statek_hw/rt_src/src/: main.cpp  motor_controller.cpp
catkin_ws/src/statek_hw/src/: camera.cpp  laser_to_img_node.cpp  ros_camera.cpp  vision_publisher_node.cpp
catkin_ws/src/statek_hw/src/laser_to_img/: laser_to_img_node.cpp
catkin_ws/src/statek_hw/src/vision_publisher/: camera.cpp  ros_camera.cpp  vision_publisher_node.cpp
catkin_ws/src/statek_hw/srv/: RunImuCalibration.srv  RunModelIdentification.srv  RunVelocityTest.srv  SetImuParams.srv  SetMotorParams.srv  SetOdomParams.srv
catkin_ws/src/statek_map/: CMakeLists.txt  package.xml
catkin_ws/src/statek_map/include/: abstract_map.hpp  common.hpp  laser_scan_map.hpp  map_fuser.hpp  voronoi_map.hpp
catkin_ws/src/statek_map/include/gps_to_tf/: fix_to_tf.hpp  kalman.hpp
catkin_ws/src/statek_map/include/local_mapper/: dynamic_leg_map.hpp  laser_scan_map.hpp  map_fuser.hpp
catkin_ws/src/statek_map/include/voronoi_mapper/: voronoi_map.hpp
catkin_ws/src/statek_map/launch/: gps_to_tf.launch  local_mapper.launch  mappers.launch  voronoi_mapper.launch
catkin_ws/src/statek_map/msg/: Graph.msg  GraphNode.msg
catkin_ws/src/statek_map/nodes/: static_map_generator_node.py
catkin_ws/src/statek_map/src/: abstract_map.cpp  common.cpp  gps_to_tf_node.cpp  local_mapper_node.cpp  static_map_generator_node.cpp  voronoi_mapper_node.cpp
catkin_ws/src/statek_map/src/gps_to_tf/: fix_to_tf.cpp  gps_to_tf_node.cpp  integrator.cpp  kalman.cpp
catkin_ws/src/statek_map/src/local_mapper/: dynamic_leg_map.cpp  laser_scan_map.cpp  local_mapper_node.cpp  map_fuser.cpp
catkin_ws/src/statek_map/src/voronoi_mapper/: voronoi_map.cpp  voronoi_mapper_node.cpp
catkin_ws/src/statek_map/srv/: EnuToGeo.srv  GeoToEnu.srv
catkin_ws/src/statek_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/statek_msgs/msg/: Encoder.msg  Velocity.msg
catkin_ws/src/statek_msgs/srv/: RunImuCalibration.srv  RunModelIdentification.srv  RunVelocityTest.srv  SetImuParams.srv  SetMotorParams.srv  SetOdomParams.srv  VelocityTest.srv
catkin_ws/src/statek_nav/: CMakeLists.txt  package.xml
catkin_ws/src/statek_nav/include/: mpc.hpp
catkin_ws/src/statek_nav/launch/: long_term_nav.launch  nav.launch  short_term_nav.launch
catkin_ws/src/statek_nav/msg/: LongTermPath.msg
catkin_ws/src/statek_nav/nodes/: long_term_navigator.py
catkin_ws/src/statek_nav/src/: fg_eval.cpp  mpc.cpp  short_term_navigator.cpp
catkin_ws/src/statek_rviz/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/statek_rviz/launch/: graph_to_markers.launch  map_to_markers.launch  rviz.launch  view.launch
catkin_ws/src/statek_rviz/mesh/: human.dae
catkin_ws/src/statek_rviz/rviz/: statek.rviz  view.rviz
catkin_ws/src/statek_rviz/src/: graph_to_markers_node.cpp  map_to_markers_node.cpp
catkin_ws/src/statek_rviz/urdf/: chassis.dae  statek.urdf
catkin_ws/src/statek_sim/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/statek_sim/include/: odometry.hpp  statek_motor_control.h
catkin_ws/src/statek_sim/launch/: park.launch  simple_world.launch  spawn_statek.launch  world.launch
catkin_ws/src/statek_sim/models/park_bench/: model.config  model.sdf
catkin_ws/src/statek_sim/models/park_jesus/: model.config  model.sdf
catkin_ws/src/statek_sim/models/park_map/: model.config  model.sdf
catkin_ws/src/statek_sim/models/park_sandpit/: model.config  model.sdf
catkin_ws/src/statek_sim/models/park_statue/: model.config  model.sdf
catkin_ws/src/statek_sim/models/park_toilet/: model.config  (+1 more)
catkin_ws/src/statek_sim/src/: statek_motor_control.cpp
catkin_ws/src/statek_sim/worlds/: park.world  simple_world.world
catkin_ws/src/statek_tf/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/statek_tf/launch/: dynamic_transform_publisher.launch  static_transform_publisher.launch  transform_publishers.launch
catkin_ws/src/statek_tf/nodes/: encoders_wheels_transforms_publisher.py
catkin_ws/src/statek_tf/scripts/: dynamic_transform_publisher_node.py
(+1197 files in other folders)
