<?xml version="1.0"?>
<package format="2">
  <name>statek_hw</name>
  <version>0.0.0</version>
  <description>The statek_hw package</description>

  <maintainer email="statek@todo.todo">statek</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rospkg</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rospkg</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rospkg</exec_depend>

  <export></export>
</package>
