<?xml version="1.0"?>
<package format="2">
  <name>statek_msgs</name>
  <version>0.0.0</version>
  <description>The statek_msgs package</description>

  <maintainer email="statek@todo.todo">statek</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
