<?xml version="1.0"?>
<package format="2">
  <name>statek_rviz</name>
  <version>0.0.0</version>
  <description>The statek_rviz package</description>

  <maintainer email="statek@todo.todo">statek</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
