<?xml version="1.0"?>
<package format="2">
  <name>statek_sim</name>
  <version>0.0.0</version>
  <description>The statek_sim package</description>

  <maintainer email="mateusz@todo.todo">mateusz</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>statek_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>statek_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>statek_msgs</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/../../devel/lib" gazebo_media_path="${prefix}/models" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
