<?xml version="1.0"?>
<package format="2">
  <name>statek_tf</name>
  <version>0.0.0</version>
  <description>The statek_tf package</description>

  <maintainer email="statek@todo.todo">statek</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2</build_depend>
    <build_depend>statek_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>statek_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>statek_msgs</exec_depend>

  <export></export>
</package>
